<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/contentFrame"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttonBottomLayout" />

    <LinearLayout
        android:id="@+id/buttonBottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/dish_rl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|bottom">

            <Button
                android:id="@+id/dishes_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/bot_bar"
                android:drawableTop="@drawable/tab_dish_selector"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/dish"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/recipe_rl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|bottom">

            <Button
                android:id="@+id/myRecipes_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bot_bar"
                android:drawableTop="@drawable/tab_dish_selector"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/discover"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="25dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/tab_notification_selector"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/notification_rl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:visibility="visible">

            <Button
                android:id="@+id/notification_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/bot_bar"
                android:drawableTop="@drawable/tab_notification_selector"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/notification"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/note_message_count_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="25dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/notification"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting_rl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|bottom">

            <Button
                android:id="@+id/setting_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bot_bar"
                android:drawableTop="@drawable/tab_setting_selector"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
